# expsys

./: README.md  pyproject.toml  setup.cfg
examples/pyspread/: parts-horse.pysu  parts-horse.pysu.sig
expsys/: __init__.py  __main__.py  agent_manager.py  inference_engine.py  notifications.py  pyspread.py
expsys/agent/: date_range.py  datetime_range.py  dns.py  http.py  ssh.py  strftime.py
tests/: test_main.py
